scrollbar x axis fixed

--- a/src/sass_modules/cta.scss
+++ b/src/sass_modules/cta.scss
@@ -1,5 +1,6 @@
 .cta {
-  height: 100vh;
+  overflow-x: hidden;
+  height: 800px;
   background: $bg;
   display: flex;
   justify-content: center;
