--- a/src/sass_modules/global.scss
+++ b/src/sass_modules/global.scss
@@ -3,7 +3,7 @@ body {
   height: 100%;
   line-height: 1.25;
   box-sizing: border-box;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 h1,
 h2,
