--- a/src/sass_modules/navbar.scss
+++ b/src/sass_modules/navbar.scss
@@ -2,14 +2,14 @@
   position: fixed;
   background: $color5;
   width: 100%;
-  z-index: 2;
+  overflow: hidden;
+  z-index: 1;
   display: flex;
   align-items: center;
   // padding: 15px 0;
   top: 0;
   left: 0;
   .title {
-    margin-left: 50px;
     text-transform: uppercase;
     color: $color2;
     font-size: 24px;
